fixed code to align button in about me section

--- a/style.css
+++ b/style.css
@@ -19,7 +19,9 @@ html{
     font-size: 6rem;
     color: white;
     z-index: 1;
-}.btn{
+}
+
+.btn{
     color:white;
 }
 
@@ -44,8 +46,7 @@ html{
     color:black;
     display: flex;
     justify-content: center;
-    /* margin: 50px;
-    padding: 100px; */
+    align-items: center;
 }
 
 .aboutMeContent{
@@ -53,7 +54,10 @@ html{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: relative;
 }
+
+
+
+
 
 
